LPD-52794 buildRest
