# modules/apps/object/object-rest-api/src/main/java/com/liferay/object/rest/resource/v1_0/CollaboratorResource.java
@@ -41,20 +41,19 @@ import org.osgi.annotation.versioning.ProviderType;
 @ProviderType
 public interface CollaboratorResource {
 
-	public void deleteObjectEntryCollaboratorByTypeCollaboratorTypeCollaborator(
-			Long objectEntryId, String collaboratorType, Long collaboratorId)
+	public void deleteObjectEntryCollaboratorByTypeCollaborator(
+			Long objectEntryId, String type, Long collaboratorId)
 		throws Exception;
 
 	public void
-			deleteScopeScopeKeyByExternalReferenceCodeCollaboratorByTypeCollaboratorTypeCollaborator(
-				String scopeKey, String externalReferenceCode,
-				String collaboratorType, Long collaboratorId)
+			deleteScopeScopeKeyByExternalReferenceCodeCollaboratorByTypeCollaborator(
+				String scopeKey, String externalReferenceCode, String type,
+				Long collaboratorId)
 		throws Exception;
 
 	public com.liferay.headless.object.dto.v1_0.Collaborator
-			getObjectEntryCollaboratorByTypeCollaboratorTypeCollaborator(
-				Long objectEntryId, String collaboratorType,
-				Long collaboratorId)
+			getObjectEntryCollaboratorByTypeCollaborator(
+				Long objectEntryId, String type, Long collaboratorId)
 		throws Exception;
 
 	public Page<com.liferay.headless.object.dto.v1_0.Collaborator>
@@ -63,9 +62,9 @@ public interface CollaboratorResource {
 		throws Exception;
 
 	public com.liferay.headless.object.dto.v1_0.Collaborator
-			getScopeScopeKeyByExternalReferenceCodeCollaboratorByTypeCollaboratorTypeCollaborator(
-				String scopeKey, String externalReferenceCode,
-				String collaboratorType, Long collaboratorId)
+			getScopeScopeKeyByExternalReferenceCodeCollaboratorByTypeCollaborator(
+				String scopeKey, String externalReferenceCode, String type,
+				Long collaboratorId)
 		throws Exception;
 
 	public Page<com.liferay.headless.object.dto.v1_0.Collaborator>
@@ -94,16 +93,15 @@ public interface CollaboratorResource {
 		throws Exception;
 
 	public com.liferay.headless.object.dto.v1_0.Collaborator
-			putObjectEntryCollaboratorByTypeCollaboratorTypeCollaborator(
-				Long objectEntryId, String collaboratorType,
-				Long collaboratorId,
+			putObjectEntryCollaboratorByTypeCollaborator(
+				Long objectEntryId, String type, Long collaboratorId,
 				com.liferay.headless.object.dto.v1_0.Collaborator collaborator)
 		throws Exception;
 
 	public com.liferay.headless.object.dto.v1_0.Collaborator
-			putScopeScopeKeyByExternalReferenceCodeCollaboratorByTypeCollaboratorTypeCollaborator(
-				String scopeKey, String externalReferenceCode,
-				String collaboratorType, Long collaboratorId,
+			putScopeScopeKeyByExternalReferenceCodeCollaboratorByTypeCollaborator(
+				String scopeKey, String externalReferenceCode, String type,
+				Long collaboratorId,
 				com.liferay.headless.object.dto.v1_0.Collaborator collaborator)
 		throws Exception;
 
