# modules/apps/object/object-rest-impl/rest-openapi.yaml
@@ -797,7 +797,7 @@ paths:
         delete:
             description:
                 Deletes the collaborator for an object entry and returns a 204 if the operation succeeds.
-            operationId: deleteScopeScopeKeyByExternalReferenceCodeCollaboratorByTypeCollaboratorTypeCollaborator
+            operationId: deleteScopeScopeKeyByExternalReferenceCodeCollaboratorByTypeCollaborator
             parameters:
                 -   in: path
                     name: scopeKey
@@ -829,7 +829,7 @@ paths:
         get:
             description:
                 Retrieves the collaborator for an object entry.
-            operationId: getScopeScopeKeyByExternalReferenceCodeCollaboratorByTypeCollaboratorTypeCollaborator
+            operationId: getScopeScopeKeyByExternalReferenceCodeCollaboratorByTypeCollaborator
             parameters:
                 -   in: path
                     name: scopeKey
@@ -877,7 +877,7 @@ paths:
         put:
             description:
                 Add or update a collaborator received in the request.
-            operationId: putScopeScopeKeyByExternalReferenceCodeCollaboratorByTypeCollaboratorTypeCollaborator
+            operationId: putScopeScopeKeyByExternalReferenceCodeCollaboratorByTypeCollaborator
             parameters:
                 -   in: path
                     name: scopeKey
@@ -1233,7 +1233,7 @@ paths:
         delete:
             description:
                 Deletes the collaborator for an object entry and returns a 204 if the operation succeeds.
-            operationId: deleteObjectEntryCollaboratorByTypeCollaboratorTypeCollaborator
+            operationId: deleteObjectEntryCollaboratorByTypeCollaborator
             parameters:
                 -   in: path
                     name: objectEntryId
@@ -1261,7 +1261,7 @@ paths:
         get:
             description:
                 Retrieves the collaborator for an object entry.
-            operationId: getObjectEntryCollaboratorByTypeCollaboratorTypeCollaborator
+            operationId: getObjectEntryCollaboratorByTypeCollaborator
             parameters:
                 -   in: path
                     name: objectEntryId
@@ -1305,7 +1305,7 @@ paths:
         put:
             description:
                 Add or update a collaborator received in the request.
-            operationId: putObjectEntryCollaboratorByTypeCollaboratorTypeCollaborator
+            operationId: putObjectEntryCollaboratorByTypeCollaborator
             parameters:
                 -   in: path
                     name: objectEntryId
